# quant

./: .gitignore  AGENT.md  README.md  install.ps1  install.sh  pyproject.toml
.claude/skills/rqq-data/: SKILL.md
docs/: cli-usage.md  data-request-checklist.md  data-source-coverage.md
scripts/: gen_catalog.py  live_data_check.py  verify_all_datasets.py
src/rqsdk_quant/: __init__.py  business.py  catalog.py  cli.py  datasets.py  errors.py  output.py  reference.py  rqdata_client.py  scenarios.py
tests/: test_cli.py
